deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fencing
  namespace: fencing
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: fencing
  type: NodePort
