deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
    traefik.ingress.kubernetes.io/router.entrypoints: web
  labels:
    app: fencing
  name: fencing
  namespace: fencing
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: fencing
                port:
                  number: 80
            path: /fencing
            pathType: Prefix
